[package]
name = "temporal_segment_log"
version = "0.1.2"
edition = "2021"
authors = ["Vishwanath M M"]
description = "Temporal Segment Log (TSL): High-throughput time-ordered data structure"
license = "MIT"
repository = "https://github.com/vishwanathdvgmm/Temporal_Segment_Log"
readme = "README.md"
keywords = ["temporal", "log", "data-structure", "stream", "index"]
categories = ["data-structures"]

[dependencies]
parking_lot = "0.12"
crossbeam = "0.8"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[lib]
name = "tsl"
crate-type = ["cdylib", "rlib"]

[features]
python = ["pyo3"]

[dependencies.pyo3]
version = "0.21"
features = ["extension-module"]
optional = true

[[bench]]
name = "ingest"
harness = false

[[bench]]
name = "query"
harness = false

[[bench]]
name = "mixed"
harness = false